update IntelliJ version

--- a/build.gradle
+++ b/build.gradle
@@ -125,6 +125,10 @@ intellijPlatform {
     pluginConfiguration {
         name = 'Liferay IntelliJ Plugin'
         projectName = 'Liferay IntelliJ Plugin'
+
+        ideaVersion {
+            sinceBuild = "251"
+        }
     }
 
     pluginVerification {
