--- a/.github/workflows/liferay-plugin-intellij.yml
+++ b/.github/workflows/liferay-plugin-intellij.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
       - name: Run build with Gradle Wrapper
-        run: ./gradlew build buildPlugin
+        run: ./gradlew build buildPlugin --stacktrace
       - name: Upload build artifacts
         uses: actions/upload-artifact@v4
         with:
