--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -33,6 +33,7 @@
     	  <li>Feature: Run Configuration for gogo shell commands</li>
     	  <li>Feature: add syntax highlighting for `.npmbundlerrc`</li>
     	  <li>Bugfix: improve compatibility with IntelliJ Community Edition</li>
+    	  <li>Bugfix: Avoid a possible freeze when opening a project with many <code>package.json</code> files</li>
     	</ul>
 
         <p>Version 0.0.25</p>
